fixed bugs, made game end conditions non-overlapping, reduced ability to guess letters twice, added feedback textbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,12 @@
-p{
+p, h1{
     text-align: center;
 }
 
 img{
     text-align: center;
     height: 150px;
+}
+
+.card{
+    overflow:auto;
 }
